fixed overflow buttons

--- a/styles/_blocks/tiles.scss
+++ b/styles/_blocks/tiles.scss
@@ -149,6 +149,7 @@
 				}
 
 				.pa_btn {
+					box-sizing: border-box;
 					width: 100%;
 					text-align: center;
 				}
